--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,16 +1,11 @@
 header {
-  background-image: url("../imagens/back.jpg");
-    background-size: cover; 
-    background-position: bottom; 
-    background-repeat: no-repeat; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    background-image: url("../imagens/back.jpg");
+    background-size: cover;
+    background-position-x: center;  
+    background-position-y: 70%;     
+    background-repeat: no-repeat;
     width: 100%;
     height: 175px;
-    margin-bottom: 25px;
-    background-color: #f5f5f5;
 }
 
 #perfil {
@@ -36,7 +31,8 @@ header {
 @media (max-width: 638px) {
     
     header {
-        height: 150px;
+        height: 150px;  
+        background-position: bottom;  
     }
     #perfil {
         bottom: -60px; 
