--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -13,14 +13,14 @@
 
     .floating-button {
         justify-content: space-between;
-    align-items: center;
-    width: 260px;
-    height: 30px;
-    border-radius: 50px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 10px;
-    border: 1px solid black;
+        align-items: center;
+        width: 260px;
+        height: 30px;
+        border-radius: 50px;
+        text-align: center;
+        font-weight: 500;
+        font-size: 10px;
+        border: 1px solid black;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -31,16 +31,16 @@
         text-wrap: none;
     }
 
-    .floating-button:hover {
-        transform: translateY(-3px);
+        .floating-button:hover {
+            transform: translateY(-3px);
             background-color: black;
             color: white;
         } 
-        .round-button:hover .Pay-arrow {
+        .floating-button:hover .Pay-arrow {
             color: white; 
         }
 
-        .round-button:hover #vetor {
+        .floating-button:hover #vetor {
             filter: brightness(0) invert(1);
         }
 
@@ -48,7 +48,7 @@
             width: 20px;
         }
         
-        .round-button:active {
+        .floating-button:active {
             transform: scale(0.98);
         }
         .Pay-arrow {
